--- a/frontend/frontend/desktop/skitrack/views/index.html
+++ b/frontend/frontend/desktop/skitrack/views/index.html
@@ -26,7 +26,7 @@
         <ul class="nav-links navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="Resorts.html">Resorts</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Weather</a></li>
+          <li class="nav-item"><a class="nav-link" href="Weather.html">Weather</a></li>
           <li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
         </ul>
