--- a/frontend/frontend/views/Snowboarding.html
+++ b/frontend/frontend/views/Snowboarding.html
@@ -85,18 +85,22 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container nav-flex">
     <div class="logo d-flex align-items-center">
-      <img src="../images/logo.png" alt="Ski Track Logo" class="img-fluid" style="width: 80px; height: 80px;"/>
-      <span>Ski Track</span>
+      <a href="index.html">
+        <img src="../views/../images/logo.png" alt="Ski Track Logo" class="img-fluid" style="width: 80px; height: 80px;" />
+      </a>        
+      <a href="index.html" style="text-decoration: none; color: inherit;">
+        <span>Ski Track</span>
+      </a>        
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="nav-links navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link " href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="Resorts.html">Resorts</a></li>
-        <li class="nav-item"><a class="nav-link " href="#">Weather</a></li>
-        <li class="nav-item"><a class="nav-link" href="#"></a>About</li>
+        <li class="nav-item"><a class="nav-link" href="weather.html" id="weather-link">Weather</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
       </ul>
     </div>
@@ -296,41 +300,7 @@
 </section>
 
 
-<!-- Trainers Section -->
-<section class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">Meet Our Trainers</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card h-100 text-center">
-            <img src="../images/jamesnow.jpg" class="card-img-top" alt="John Snow">
-            <div class="card-body">
-              <h5 class="card-title">John Snow</h5>
-              <p class="card-text">10 Years of Experience</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100 text-center">
-            <img src="../images/emmafrost.jpg" class="card-img-top" alt="Emma Frost">
-            <div class="card-body">
-              <h5 class="card-title">Emma Frost</h5>
-              <p class="card-text">8 Years of Experience</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card h-100 text-center">
-            <img src="../images/liampeak.webp" class="card-img-top" alt="Liam Peak">
-            <div class="card-body">
-              <h5 class="card-title">Liam Peak</h5>
-              <p class="card-text">12 Years of Experience</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
   
   
 
@@ -347,15 +317,44 @@
 
 <!-- Footer -->
 <footer class="footer bg-dark text-light py-4">
-  <div class="container d-flex justify-content-between align-items-center">
-    <span>&copy; 2025 Ski Track. All rights reserved.</span>
-    <div>
-      <a href="#" class="text-light me-3"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" class="text-light me-3"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="text-light"><i class="fab fa-twitter"></i></a>
-    </div>
+  <div class="container footer-flex d-flex flex-column flex-md-row justify-content-between align-items-center">
+    
+    <span class="footer-left mb-2 mb-md-0">
+      © 2024 Ski Track. All rights reserved.
+    </span>
+    
+    <section class="newsletter-section mb-2 mb-md-0">
+      <div class="newsletter-container">
+        <h3 class="h6">Subscribe to our Ski Track Newsletter</h3>
+        <form id="newsletterForm" class="d-flex" onsubmit="subscribeNewsletter(event)">
+          <input type="email" id="newsletterEmail" class="form-control me-2" placeholder="Your email address..." required>
+          <button type="submit" class="btn btn-primary"><i class="fas fa-envelope"></i> Subscribe</button>
+        </form>
+        <div class="newsletter-message" id="newsletterMessage"></div>
+      </div>
+    </section>
+    
+    <span class="footer-right">
+      <a href="https://www.facebook.com/" target="_blank" class="text-light me-2">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/" target="_blank" class="text-light me-2">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://x.com/" target="_blank" class="text-light me-2">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="https://al.linkedin.com/" target="_blank" class="text-light">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </span>
   </div>
 </footer>
+
+
+<button onclick="scrollToTop()" class="back-to-top btn btn-primary rounded-circle position-fixed bottom-0 end-0 m-4 shadow" id="backToTopBtn" title="Go to top">
+  <i class="fa fa-chevron-up"></i>
+</button>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
