--- a/frontend/views/EventPage.html
+++ b/frontend/views/EventPage.html
@@ -98,7 +98,7 @@
     <!-- NAVBAR LINKS + SEARCH + PROFILE ICON (djathtas) -->
     <div class="collapse navbar-collapse d-flex justify-content-end align-items-center" id="navbarNav">
       <ul class="nav-links navbar-nav me-3">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="Resorts.html">Resorts</a></li>
         <li class="nav-item"><a class="nav-link" href="weather.html" id="weather-link">Weather</a></li>
         <li class="nav-item"><a class="nav-link" href="#">About</a></li>
